@startuml Simpliz Database Design

entity users {
    * id: uuid <<PK>>
    * name: varchar(32)
    * email: varcher(64)
    * password: text
    * gender: enum('male', 'female')
    * role: enum('superadmin', 'admin', 'examineer')
    * created_at: timestamp
    * updated_at: timestamp
    ---
}

entity quizzes {
    * id: uuid <<PK>>
    * name: varchar(255)
    * description: text
    * duration: int
    * is_enabled: boolean
    * created_at: timestamp
    * updated_at: timestamp
    ---
}

entity user_quizzes {
    * id: uuid <<PK>>
    ---
    * user_id: uuid <<FK>>
    * quiz_id: uuid <<FK>>
}

entity questions {
    * id: uuid <<PK>>
    context: text
    * body: text
    ---
    * quiz_id uuid <<FK>>
}

entity options {
    * id: uuid <<PK>>
    * body: text
    * is_answer: boolean
    ---
    * question_id: uuid <<FK>>
}

entity results {
    * id: uuid <<PK>>
    * created_at: timestamp
    completed_at: timestamp
    completed_in: datetime
    score: float
    ---
    * user_id: uuid <<FK>>
    * quiz_id: uuid <<FK>>
}

entity quiz_sessions {
    * id: uuid <<PK>>
    * last_question_page: int
    * ends_at: timestamp
    ---
    * result_id: uuid <<FK>>
}

entity activities {
    * id: uuid <<PK>>
    * body: text
    * created_at: timestamp
    ---
    * user_id: uuid <<FK>>
}

entity user_options {
    * id: uuid <<PK>>
    is_correct: boolean
    ---
    * result_id: uuid <<FK>>
    * question_id: uuid <<FK>>
    option_id: uuid <<FK>>
}

users ||--o{ user_quizzes
users ||--o{ activities
users ||--o{ results
quizzes ||--o{ user_quizzes
quizzes ||--o{ questions
quizzes ||--o{ results
questions ||--|{ options
results ||--o| quiz_sessions
results ||--|{ user_options
user_options }o--o| questions
user_options }o--o| options

@enduml
